#1955 Java JDK 22 and Gradle 8.10.  Updates SDRPlay API to latest Project Panama FFM API changes. Increment app version to 0.6.1-beta2